RESOLVED FIXED199662
[iOS] REGRESSION(r244851): Revealing caret sometimes fails when content inset is used
https://bugs.webkit.org/show_bug.cgi?id=199662
Summary [iOS] REGRESSION(r244851): Revealing caret sometimes fails when content inset...
Ryosuke Niwa
Reported 2019-07-09 23:47:42 PDT
When WKWebView's content inset is used, we sometimes fail to reveal the caret as the user types. <rdar://problem/52103924>
Attachments
Fixes the bug (5.10 KB, patch)
2019-07-09 23:53 PDT, Ryosuke Niwa
no flags
Patch for landing (5.49 KB, patch)
2019-07-10 13:30 PDT, Ryosuke Niwa
no flags
Ryosuke Niwa
Comment 1 2019-07-09 23:53:04 PDT
Created attachment 373825 [details] Fixes the bug
Simon Fraser (smfr)
Comment 2 2019-07-10 11:47:15 PDT
Comment on attachment 373825 [details] Fixes the bug View in context: https://bugs.webkit.org/attachment.cgi?id=373825&action=review > Source/WebCore/rendering/RenderLayer.cpp:2685 > LayoutRect viewRect = frameView.visualViewportRectExpandedByContentInsets(); > > + maxScrollPosition = frameView.scrollPositionFromOffset(ScrollPosition(frameView.totalContentsSize() - flooredIntSize(viewRect.size()))); We need to clean this up so that webcore code doesn't have to get muddied with inset complexity.
Ryosuke Niwa
Comment 3 2019-07-10 13:29:56 PDT
Ryosuke Niwa
Comment 4 2019-07-10 13:30:48 PDT
Created attachment 373861 [details] Patch for landing
WebKit Commit Bot
Comment 5 2019-07-10 14:12:54 PDT
Comment on attachment 373861 [details] Patch for landing Clearing flags on attachment: 373861 Committed r247327: <https://trac.webkit.org/changeset/247327>
WebKit Commit Bot
Comment 6 2019-07-10 14:14:04 PDT
All reviewed patches have been landed. Closing bug.
Ryosuke Niwa
Comment 7 2019-07-11 16:30:16 PDT
Note You need to log in before you can comment on or make changes to this bug.