[iOS] REGRESSION(r244851): Revealing caret sometimes fails when content inset is used https://bugs.webkit.org/show_bug.cgi?id=199662

Reviewed by Simon Fraser.

Source/WebCore:

The bug was caused by ScrollableArea::maximumScrollPosition using ScrollableArea::visibleSize, which does not
take the content insets into account correctly, rather than FrameView::visualViewportRectExpandedByContentInsets,
which does, and is used for "viewRect" in RenderLayer::scrollRectToVisible.

Override the maximum scroll position using visualViewportRectExpandedByContentInsets in iOS to fix the issue.

Test: editing/selection/ios/autoscroll-with-top-content-inset-2.html

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::scrollRectToVisible): Fixed the bug.

LayoutTests:

Added a regression test.

* editing/selection/ios/autoscroll-with-top-content-inset-2-expected.txt: Added.
* editing/selection/ios/autoscroll-with-top-content-inset-2.html: Added.


Canonical link: https://commits.webkit.org/213566@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247327 268f45cc-cd09-0410-ab3c-d52691b4dbfc